[package]
name = "buddha"
version = "0.1.0"
authors = ["Arthur Carcano <arthur.carcano@inria.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = "0.23.10", default-features = false, features = ["png"]}
num-complex = {version = "0.3.0", features = ["rand"]}
rand = {version="0.7.3", features=["small_rng"]}
rand_distr = "0.3.0"

